--- a/akiss.csproj
+++ b/akiss.csproj
@@ -1,11 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
   <PropertyGroup>
     <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
     <TargetFramework>net6.0</TargetFramework>
-    <!-- <Nullable>enable</Nullable> -->
     <ImplicitUsings>enable</ImplicitUsings>
+	<DebugType>portable</DebugType>
   </PropertyGroup>
-
+	
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	    <DefineConstants>$(DefineConstants)TRACE;$(DefineConstants)DEBUG</DefineConstants>
+	    <DebugType>portable</DebugType>
+    </PropertyGroup>
+	
   <ItemGroup>
     <PackageReference Include="blazored.localstorage" Version="4.2.0" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.56.0.2601" />
